disciplina optativa - compreensao, manutencao e evolucao

--- a/gsi600.html
+++ b/gsi600.html
@@ -68,27 +68,27 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 2º Semestre de 2025 - Engenharia de Computação</span>
+				<span>Disciplinas 1º Semestre de 2025 - Engenharia de Computação</span>
 				<h2>Compreensão, Manutenção e Evolução de Software</h2>
-				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
+				<span>Disciplina Optativa</span>
 			</div>
 		</div>
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<div>
+					<!--<div>
 					<b>Plano didático:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi600/Plano-Didático-ES2-2025-1_1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi600/temas_TCC_eduardo_2023-1.pdf"> Temas de TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi600/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi600/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi600/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
-					</div>
+					</div>-->
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(30/04/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
+					<li>Prova 1 - 30 pts <b>(30/04/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<li>Prova 2 - 30 pts <b>(04/06/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12 </i>--></li>
 					<li>Prova 3 - 30 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 13, 14, 15, 16, 17 e 18 </i>--></li>
 					<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
@@ -99,26 +99,16 @@
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula1-plano_do_curso.pptx"> Aula 01 - Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula2-sistemas_criticos.pdf"> Aula 02 - Sistemas críticos</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula3-processos.pptx"> Aula 03 - Processos</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula4-openUp.pdf"> Aula 04 - OpenUp</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula5-smells.pptx"> Aula 05 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula6-reuso.pptx"> Aula 06 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula8-arquitetura.pptx"> Aula 08 - Arquitetura de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula9-padroes-arquiteturais.pptx"> Aula 09 - Padrões Arquiteturais: Camadas, MVC e Microservices </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Hexagonal e Serverless</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula11-qualidade.pptx"> Aula 11 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula12-testes.pptx"> Aula 12 - Testes de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula13-controle-versao.pptx"> Aula 13 - Sistemas de Controle de Versão</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)--></li> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula14-idiomas-programacao.pptx"> Aula 14 - Idiomas de Programação</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula15-devops.pptx"> Aula 15 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula16-principios-de-projeto.pptx"> Aula 16 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula17-padroes-de-projeto.pptx"> Aula 17 - Padrões de projeto (Parte 1)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula18-padroes-de-projeto.pptx"> Aula 18 - Padrões de projeto (Parte 2)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Serverless </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=osPbeoscOQE"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi600/aula11-qualidade.pptx"> Aula 11 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap1-introducao.pptx"> Aula 01 - Introdução</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap2-codigo-legivel-novo.pptx"> Aula 02 - Código legível</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap3-documentacao-novo.pptx"> Aula 03 - Documentação de código</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap4-codigo-flexivel-novo.pptx"> Aula 04 - Código Flexível a Mudanças</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap5-manutencao-corretiva-novo.pptx"> Aula 05 - Manutenção Corretiva</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap6-depuracao.pptx"> Aula 06 - Depuração</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap7-refatoracao-smells-novo.pptx"> Aula 07 - Refatoração</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap8-divida-tecnica.pptx"> Aula 08 - Dívida Técnica</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap9-sistemas-legados.pptx"> Aula 09 - Sistemas Legados </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi600/cap10-processos.pptx"> Aula 10 - Processos</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)--></li>
 						</ul> 
 					</div> 
 					<!--<div>
@@ -141,7 +131,7 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/0a7_beBYw58"> Aula de Exercícios sobre DevOps e Padrões de Projeto</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					</ul>
 					</div>-->
-					<div>
+					<!--<div>
 					<b>Listas:</b> 
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi600/lista1.pdf"> Lista 01 (Entrega: <b>29/04/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
@@ -157,9 +147,9 @@
 					<!-- <li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
-					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>--> 
+					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> 
 					</ul>
-					</div>
+					</div>-->
 				</div> 
 			</div>
 		</div>
