--- a/material.html
+++ b/material.html
@@ -88,6 +88,7 @@
 						<!--<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50 - 16h50 / Quarta: 13h10 - 14h50)</b></i></a></li>
 						<li><a href="gsi526.html"><i class="icon-home"></i><i> GSI526 - Engenharia de Software <b>(Quarta: 08h50 - 10h40 / Quinta: 10h40 - 12h20)</b></i></a></li>
 						<li><a href="gsi538.html"><i class="icon-home"></i><i> GSI538 - Projeto e Desenvolvimento de Sistemas de Informação 2 <b>(Terça: 08h50 - 12h20)</b></i></a></li> -->
+						<li><a href="gsi600.html"><i class="icon-home"></i><i> GSI600 - Compreensão, Manutenção e Evolução de Software <b>(Quinta: 08h50 - 10h40)</b></i></a></li> 
 						</ul>
 					</div>
 				</div>
