--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -89,7 +89,7 @@
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/relacao_dos_grupos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
