materia da prova 2 de poo

--- a/poo-python.html
+++ b/poo-python.html
@@ -86,7 +86,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 30 pts <b>(06/05/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
-					<li>Prova 2 - 35 pts <b>(03/06/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)--></li>
+					<li>Prova 2 - 35 pts <b>(03/06/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
 					<li>Prova 3 - 35 pts <b>(15/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)--></li>
 					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
