--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -141,11 +141,12 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
-					<!--<div>
+					<div>
 					<b>Códigos-fontes:</b> 
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 5</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 06</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/P6Ex1.py"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Código da Prática 06 - Ex. 01</b></a></li>
+					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica8/src"> <i>Código Incompleto da Prática 8</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99439"> Aula Síncrona Gravada - Prática 1</a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=100038"> Aula Síncrona Gravada - Prática 2</a></li>
@@ -166,10 +167,10 @@
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/POOAulas/src"> <i>Pseudocódigo para exemplificar o comentário na rede social</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>					
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho2.pdf"> Roteiro (Trabalho 2)</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho3.pdf"> Roteiro (Trabalho 3)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
+					 
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> 
-					</ul>
-					</div>-->
+					</ul>-->
+					</div>
 				</div>
 			</div>
 		</div>
