--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -146,6 +146,7 @@
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 06</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/P6Ex1.py"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Código da Prática 06 - Ex. 01</b></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/P7Ex1.py"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Código da Prática 07 - Ex. 01</b></a></li>
 					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica8/src"> <i>Código Incompleto da Prática 8</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://video.rnp.br/portal/video.action?idItem=99439"> Aula Síncrona Gravada - Prática 1</a></li>
