--- a/gsi526.html
+++ b/gsi526.html
@@ -90,7 +90,7 @@
 					<ul>
 					<li>Prova 1 - 30 pts <b>(30/04/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
 					<li>Prova 2 - 30 pts <b>(04/06/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12 </i></li>
-					<li>Prova 3 - 30 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 13, 14, 15, 16, 17 e 18 </i>--></li>
+					<li>Prova 3 - 30 pts <b>(16/07/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 13, 14, 15, 16, 17 e 18 </i></li>
 					<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<li>Lista 2 - 4 pts <b>(04/06/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<li>Lista 3 - 4 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
@@ -114,7 +114,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-controle-versao.pptx"> Aula 13 - Sistemas de Controle de Versão</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-idiomas-programacao.pptx"> Aula 14 - Idiomas de Programação</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-devops.pptx"> Aula 15 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-principios-de-projeto.pptx"> Aula 16 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-principios-de-projeto.pptx"> Aula 16 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula17-padroes-de-projeto.pptx"> Aula 17 - Padrões de projeto (Parte 1)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula18-padroes-de-projeto.pptx"> Aula 18 - Padrões de projeto (Parte 2)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Serverless </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=osPbeoscOQE"> Ver Videoaula </a>)--></li>
@@ -142,13 +142,13 @@
 					</ul>
 					</div>-->
 					<div>
-					<b>Listas:</b> 
+					<b>Listas e Videoaulas:</b> 
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>29/04/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>04/06/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li> 
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>16/07/2025</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
-					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
+					<!--<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_trabalho.pdf"> <b>Grupos do Trabalho</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_seminario.pdf"> <b>Grupos do Seminário</b></a></button></li>
