--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -124,7 +124,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 8.pdf"> Exercício Prático 8</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 9.pdf"> Exercício Prático 9</a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 9.pdf"> Exercício Prático 9</a></li>
 					</ul>
 					</div>
 					<!-- <div>
