--- a/poo-python.html
+++ b/poo-python.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2025 - Engenharia Elétrica</span>
+				<span>Disciplinas 2º Semestre de 2025 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 			</div>
 		</div>
@@ -76,18 +76,18 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-					<b>Plano didático e Livro:</b>
+					<b>Livro:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/poo/backes/Plano-Didático-PC2-2025-1_1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/Plano-Didático-PC2-2025-1_1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/backes/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(06/05/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
-					<li>Prova 2 - 35 pts <b>(03/06/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
-					<li>Prova 3 - 35 pts <b>(08/07/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda - Prova presencial</i>)</li>
+					<li>Prova 1 - 30 pts <b>(A definir)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
+					<li>Prova 2 - 35 pts <b>(A definir)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
+					<li>Prova 3 - 35 pts <b>(A definir)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
 					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
 					<!--<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>-->
@@ -98,16 +98,16 @@
 					<div>
 						<ul>	
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython01-IntroducaoAoPython.ppt"> Aula 01 - Introdução ao Python</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6qpBMmhfENM"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-Listas_Tuplas_Dicionarios.pptx"> Aula 02 - Listas, Tuplas e Dicionários</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-Strings.pptx"> Aula 03 - Strings</a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Funcoes.pptx"> Aula 04 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython05-Arquivos.pptx"> Aula 05 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython06-Classes.pptx"> Aula 06 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython07-Heranca_e_Polimorfismo.pptx"> Aula 07 - Herança e Polimorfismo </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython08-Tratamento_de_Excecoes.pptx"> Aula 08 - Tratamento de Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Nocoes_de_UML.ppt"> Aula 09 - Noções de UML </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Diagrama_de_Classes.pptx"> Aula 10 - Diagrama de Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Interfaces_Graficas.pdf"> Aula 11 - Interfaces Gráficas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython02-Listas_Tuplas_Dicionarios.pptx"> Aula 02 - Listas, Tuplas e Dicionários</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=zzf1nK0Jsmg"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-Strings.pptx"> Aula 03 - Strings</a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython04-Funcoes.pptx"> Aula 04 - Funções</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython05-Arquivos.pptx"> Aula 05 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython06-Classes.pptx"> Aula 06 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython07-Heranca_e_Polimorfismo.pptx"> Aula 07 - Herança e Polimorfismo </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython08-Tratamento_de_Excecoes.pptx"> Aula 08 - Tratamento de Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Nocoes_de_UML.ppt"> Aula 09 - Noções de UML </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Diagrama_de_Classes.pptx"> Aula 10 - Diagrama de Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Interfaces_Graficas.pdf"> Aula 11 - Interfaces Gráficas</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GLUkBt89dZ4"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython12-Matplotlib.pdf"> Aula 12 - Matplotlib e Scipy</a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython13-Numpy.pdf"> Aula 13 - Numpy </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython03-VariaveisExpressoes.pptx"> Aula 03 - Variáveis e Expressões</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QaVzmIoUP1Q"> Ver Videoaula </a>)--></li>
