--- a/gsi526.html
+++ b/gsi526.html
@@ -76,24 +76,24 @@
 		<div id="fh5co-main-content">
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
-					<!--<div>
+					<div>
 					<b>Plano didático:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano-Didático-ES2-2025-1_1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/Plano-Didático-ES2-2025-2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/temas_TCC_eduardo_2023-1.pdf"> Temas de TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/agenda_atendimento_TCC.pdf"> Horário de Atendimento TCC (2023.1)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/EQUALIZACAO_CURRICULAR_COMPUTACAO.pdf"> Equalização Curricular - Área de Computação</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div>
-					<div>-->
+					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(A definir)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
-					<li>Prova 2 - 35 pts <b>(A definir)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12</i>--></li>
-					<li>Prova 3 - 35 pts <b>(A definir)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 12, 13, 14, 15, 16, 17 e 18</i>--></li>
-					<!--<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<!--<li>Lista 2 - 4 pts <b>(04/06/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
-					<!--<li>Lista 3 - 4 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li>Prova 1 - 30 pts <b>(24/09/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
+					<li>Prova 2 - 35 pts <b>(29/10/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12</i>--></li>
+					<li>Prova 3 - 35 pts <b>(03/12/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 12, 13, 14, 15, 16, 17 e 18</i>--></li>
+					<!--<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
+					<!--<li>Lista 2 - 4 pts <b>(04/06/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
+					<!--<li>Lista 3 - 4 pts <b>(16/07/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
 					<div>
