--- a/poo-python.html
+++ b/poo-python.html
@@ -76,18 +76,18 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
-					<b>Livro:</b>
+					<b>Plano didático e Livro:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/Plano-Didático-PC2-2025-1_1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/poo/backes/Plano-Didático-PC2-2025-2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/backes/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 30 pts <b>(A definir)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
-					<li>Prova 2 - 35 pts <b>(A definir)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
-					<li>Prova 3 - 35 pts <b>(A definir)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
+					<li>Prova 1 - 30 pts <b>(30/09/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 01, 02, 03 e 04 </i>)</li>
+					<li>Prova 2 - 35 pts <b>(28/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
+					<li>Prova 3 - 35 pts <b>(09/12/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Matéria toda </i>)</li>
 					<!--<li><a href="aulas/poo/backes/lista1_pc2.pdf"> Lista 01 - 7,5 pts <b>(18/10)</b> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<!--<li>Lista 01 - 7,5 pts <b>(18/10)</b></li>-->
 					<!--<li>Lista 02 - 7,5 pts <b>(06/12)</b></li>-->
