--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2025 - Química Tecnológica</span>
+				<span>Disciplinas 2º Semestre de 2025 - Química Tecnológica</span>
 				<h2>Programação de Computadores 1 Lab.</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -80,30 +80,30 @@
 					<div>
 					<b>Plano didático e Livro:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Plano-Didático-Versão-CQTEC-2025.1_1.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Plano Didático-Lab.PC1-Versão CQTEC 2025.2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
-					<div>
+					<!--<div>
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/relacao_dos_grupos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->				
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/relacao_dos_grupos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>				
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div>		
+					</div>-->	
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova - 20 pts <b>(16/05/2025)</b></a></li>
-					<li>Trabalho - 40 pts <b>(04/07/2025)</b> <a href="aulas/lab-pc1/Trabalho1-PC1.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Exercícios - 40 pts <b>(11/07/2025)</b> <i>Todos os exercícios</i> <!--<a href="aulas/lab-pc1/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Prova - 20 pts <b>(26/09/25)</b></a></li>
+					<li>Trabalho - 40 pts <b>(05/12/25)</b><!--<a href="aulas/lab-pc1/Trabalho1-PC1.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Exercícios - 40 pts <b>(12/12/25)</b><!-- - <i>Todos os exercícios</i> <!--<a href="aulas/lab-pc1/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-pc1/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-pc1/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Exercícios Práticos - 10 pts <b>(Entrega: 30/03)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
@@ -113,14 +113,14 @@
 					<b>Material:</b> 
 					<ul>						
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 1.pdf"> Exercício Prático 1</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 2.pdf"> Exercício Prático 2</a></li>			
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 3.pdf"> Exercício Prático 3</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 4.pdf"> Exercício Prático 4</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 5.pdf"> Exercício Prático 5</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 6.pdf"> Exercício Prático 6</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 8.pdf"> Exercício Prático 8</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 9.pdf"> Exercício Prático 9</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 9.pdf"> Exercício Prático 9</a></li>-->
 					</ul>
 					</div>
 					<div>
@@ -141,11 +141,11 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
-					<div>
+					<!--<div>
 					<b>Códigos-fontes:</b> 
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica5/src"> <i>Código da Prática 06</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/P6Ex1.py"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Código da Prática 06 - Ex. 01</b></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/P6Ex1.py"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Código da Prática 06 - Ex. 01</b></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/P7Ex1.py"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Código da Prática 07 - Ex. 01</b></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/menuPython.py"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Template do Menu da Prática 08 - Ex. 02</b></a></li>
 					<!--<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/Pratica6/src"> <i>Código Incompleto da Prática 6</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
@@ -169,7 +169,6 @@
 					<li><i class="icon-book"></i><a href="https://github.com/eduardocunha11/firstblog/tree/master/workspace/POOAulas/src"> <i>Pseudocódigo para exemplificar o comentário na rede social</i></a> <img src="images/new2.gif" alt="" height="11" width="28"></li>					
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho2.pdf"> Roteiro (Trabalho 2)</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho3.pdf"> Roteiro (Trabalho 3)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					 
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> 
 					</ul>-->
 					</div>
