planos didaticos t01 e t02 - lab. pc2

--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2025 - Engenharia Elétrica</span>
+				<span>Disciplinas 2º Semestre de 2025 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 				<!--<span>Prof. Dr. Eduardo Cunha Campos</span>-->
 			</div>
@@ -80,8 +80,8 @@
 					<div>
 					<b>Plano didático e Livro:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.1-Turma-03_1 1.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.1-Turma-04_1 1.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.2-Turma-01.pdf"> Plano Didático - Turma 01 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.2-Turma-02.pdf"> Plano Didático - Turma 02 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
@@ -89,11 +89,11 @@
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Grupos_Lab_PC2_T03.pdf"> Relação dos Grupos - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Grupos_Lab_PC2_T04.pdf"> Relação dos Grupos - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Grupos_Lab_PC2_T03.pdf"> Relação dos Grupos - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Grupos_Lab_PC2_T04.pdf"> Relação dos Grupos - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
@@ -103,10 +103,10 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(09/05/2025)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 2 - 30 pts <b>(13/06/2025)</b> <a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<li>Trabalho 3 - 30 pts <b>(18/07/2025)</b> <a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li>Exercícios Práticos - 10 pts <b>(04/07/2025)</b>  <i>Ex. 2, Ex. 4, Ex. 6 e Ex. 9</i> <!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
+					<li>Trabalho 1 - 30 pts <b>(10/10/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>-->
+					<li>Trabalho 2 - 30 pts <b>(14/11/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>-->
+					<li>Trabalho 3 - 30 pts <b>(28/11/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
+					<li>Exercícios Práticos - 10 pts <b>(05/12/2025)</b>  <!--<i>Ex. 2, Ex. 4, Ex. 6 e Ex. 9</i> <!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
@@ -117,14 +117,14 @@
 					<b>Material:</b> 
 					<ul>						
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 3.pdf"> Exercício Prático 3</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 5.pdf"> Exercício Prático 5</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 8.pdf"> Exercício Prático 8</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 9.pdf"> Exercício Prático 9</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 9.pdf"> Exercício Prático 9</a></li>-->
 					</ul>
 					</div>
 					<!-- <div>
