aula sobre scrum

--- a/gsi526.html
+++ b/gsi526.html
@@ -105,8 +105,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-processos.pptx"> Aula 02 - Processos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-gerencia_de_projetos.pdf"> Aula 03 - Gerência de projetos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-openUp.pdf"> Aula 04 - OpenUp</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 05 - Scrum</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-smells.pptx"> Aula 05 - Reengenharia, Refactoring e Code Smells</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-openUp.pdf"> Aula 05 - OpenUp</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-reuso.pptx"> Aula 06 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-arquitetura.pptx"> Aula 08 - Arquitetura de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
