novas aulas de pc1 e lab. pc1

--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -81,23 +81,23 @@
 					<b>Plano didático e Livro:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Plano Didático-Lab.PC1-Versão CQTEC 2025.2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
 					</div>
-					<!--<div>
+					<div>
 					<b>Grupos dos Trabalhos e Roteiros:</b>
 					<ul>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_horario_pc2.pdf"> Horário de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->				
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/relacao_dos_grupos.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>				
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					</ul>
-					</div>-->	
+					</div>	
 					<div>
 					<b>Avaliação:</b>
 					<ul>
@@ -112,11 +112,11 @@
 					<div>					
 					<b>Material:</b> 
 					<ul>						
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 1.pdf"> Exercício Prático 1</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 1.pdf"> Exercício Prático 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 3.pdf"> Exercício Prático 3</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 4.pdf"> Exercício Prático 4</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 5.pdf"> Exercício Prático 5</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 4.pdf"> Exercício Prático 4</a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 5.pdf"> Exercício Prático 5</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 6.pdf"> Exercício Prático 6</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 8.pdf"> Exercício Prático 8</a></li>
