link disabled prova 1 - pc2

--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -82,7 +82,7 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.2-Turma-01.pdf"> Plano Didático - Turma 01 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab.-PC2-2025.2-Turma-02.pdf"> Plano Didático - Turma 02 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					</ul>
 					</div>
 					<div>
@@ -116,7 +116,7 @@
 					<div>					
 					<b>Material:</b> 
 					<ul>						
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 1.pdf"> Exercício Prático 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 3.pdf"> Exercício Prático 3</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a></li>
