material disabled prova 1 de pc2

--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -81,7 +81,7 @@
 					<b>Plano didático e Livro:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Plano Didático-Lab.PC1-Versão CQTEC 2025.2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					</ul>
 					</div>
 					<div>
